<resources>
    <string name="app_name">Stamp</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="shuffle">shuffle</string>
    <string name="repeat">repeat</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <string name="cast_application_id">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="menu_period_change">Period</string>
    <string name="notification_share">Share</string>
    <string name="notification_title">%1$s is played %2$s times!!</string>
    <string name="notification_text">%1$s since first time</string>
    <plurals name="date_diff_years">
        <item quantity="one">%1$d yr</item>
        <item quantity="other">%1$d yrs</item>
    </plurals>
    <plurals name="date_diff_months">
        <item quantity="one">%1$d mth</item>
        <item quantity="other">%1$d mths</item>
    </plurals>
    <plurals name="date_diff_days">
        <item quantity="one">%1$d day</item>
        <item quantity="other">%1$d days</item>
    </plurals>
    <plurals name="date_diff_hours">
        <item quantity="one">%1$d hr</item>
        <item quantity="other">%1$d hrs</item>
    </plurals>
    <plurals name="date_diff_minutes">
        <item quantity="one">%1$d min</item>
        <item quantity="other">%1$d mins</item>
    </plurals>
    <string name="media_item_label_all_song">All</string>
    <string name="media_item_label_queue">Queue</string>
    <string name="media_item_label_stamp">Stamp</string>
    <string name="media_item_label_new">New</string>
    <string name="media_item_label_most_played">Most Played</string>
    <string name="media_item_label_artist">Artist</string>
    <string name="media_item_label_album">Album</string>
    <string name="media_item_label_genre">Genre</string>
    <string name="media_item_label_playlist">Playlist</string>
    <string name="drawer_home_title">Home</string>
    <string name="drawer_timeline_title">Timeline</string>
    <string name="drawer_queue_title">Queue</string>
    <string name="drawer_stamp">Stamp</string>
    <string name="drawer_ranking">Ranking</string>
    <string name="drawer_setting">Setting</string>
    <string name="all_song_tab_all">all</string>
    <string name="all_song_tab_artist">artist</string>
    <string name="all_song_tab_album">album</string>
    <string name="all_song_tab_playlist">playlist</string>
    <string name="all_song_tab_most_played">most played</string>
    <string name="all_song_tab_new">new</string>
    <string name="ranking_tab_my_songs">Song</string>
    <string name="ranking_tab_my_artists">Artist</string>
    <string name="stamp_tab_my_stamps">My Stamp</string>
    <string name="stamp_tab_smart_stamps">Smart Stamp</string>
    <string name="dialog_stamp_register">Register stamp</string>
    <string name="dialog_ranking_target">Select ranking target</string>
    <string name="dialog_period_select">Select ranking period</string>
    <string name="dialog_merge_song">Select valid song</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_close">CLOSE</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_reload">Reload</string>
    <string name="dialog_confirm_title">Confirm</string>
    <string name="period_total">total</string>
    <string name="period_yearly">yearly</string>
    <string name="period_monthly">monthly</string>
    <string name="period_dairy">dairy</string>
    <string name="period_custom">custom</string>
    <string name="period_label_total">total</string>
    <string name="period_label_year">%1$s</string>
    <string name="period_label_month">%1$s-%2$s</string>
    <string name="period_label_day">%1$s-%2$s-%3$s</string>
    <string name="item_song_history_seconds_ago">%1$d sec ago</string>
    <string name="item_song_history_minutes_ago">%1$d min ago</string>
    <string name="item_ranking_most_played">Most played %1$s</string>
    <string name="item_date_header_empty">Empty section</string>
    <string name="item_date_header_item_counts">%1$s section items</string>
    <string name="stamp_delete">- %1$s</string>
    <string name="stamp_add">+ Add</string>
    <string name="hash_tag">#Stamp</string>
    <string name="base_url">https://play.google.com/store/apps/details?id=com.sjn.stamp</string>
    <string name="share_song">%1$s / %2$s</string>
    <string name="share_ranked">.(%1$d times) %2$s</string>
    <string name="share_each_rank">%1$d%2$s\n</string>
    <string name="share_ranking">%1$s\n%2$s</string>
    <string name="song_history_label">%1$s/%2$s@%3$s</string>
    <string name="no_more_data">No more data</string>
    <string name="no_more_data_by_error">Failed to load data</string>
    <string name="album_art">album art</string>
    <string name="menu_timeline_upward">Go to top</string>
    <string name="setting_appearance">Appearance</string>
    <string name="setting_appearance_primary">Primary</string>
    <string name="setting_appearance_accent">Accent</string>
    <string name="setting_appearance_dark_theme">Dark Theme</string>
    <string name="setting_appearance_translucent">Translucent</string>
    <string name="setting_appearance_hide_album_art_on_lock_screen">Hide album art on lock screen</string>
    <string name="setting_songs">Songs</string>
    <string name="setting_songs_new_song_days">Days for \"NEW\"(0~999)</string>
    <string name="setting_songs_most_played_song_size">Size of \"MOST PLAYED\"(0~999)</string>
    <string name="setting_backup">Backup</string>
    <string name="setting_application_information">Application information</string>
    <string name="export_backup">Export backup</string>
    <string name="import_backup">Import backup</string>
    <string name="import_backup_summary">Existing data will be lost.</string>
    <string name="message_file_exported">File exported to Path: %1$s</string>
    <string name="message_processing">Processing</string>
    <string name="licence">Licence</string>
    <string name="version">Version</string>
    <string name="action_selected_one">%1$s selected</string>
    <string name="action_selected_many">%1$s selected</string>
    <string name="action_deleted">Deleted</string>
    <string name="action_archived">Archived</string>
    <string name="staggered_layout">Staggered Layout</string>
    <string name="columns">%1$s column(s)</string>
    <string name="no_items">No items</string>
    <string name="no_more_load_retry">No more items to load. Refresh to retry.</string>
    <string name="action_search">Search…</string>
    <string name="undo">Undo</string>
    <string name="dialog_confirm_import">All past stamps and music playback history will be lost and replaced with backup.</string>
    <string name="dialog_confirm_export">If a backup already exists, it will be overwritten.</string>
    <string name="dialog_restart_title">Restart</string>
    <string name="dialog_restart_content">Restart to reflect the backup.</string>
    <string name="dialog_delete_stamp_title">Delete stamp</string>
    <string name="dialog_delete_stamp_content">Do you want to delete stamp [%1$s] ?</string>
    <string name="dialog_lets_play_title">You do not have music play history yet.</string>
    <string name="dialog_delete_history_title">Delete playback</string>
    <string name="dialog_delete_history_content">Do you want to delete playback [%1$s] ?</string>
    <string name="dialog_reload_music_title">Reload music</string>
    <string name="dialog_reload_music_content">Reload all music in android ?（ It will take some time depending on file storage.）</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="year">year</string>
    <string name="ranking_select_target_count">Count</string>
    <string name="ranking_select_target_period">Period</string>
    <string name="stamp_register">Register</string>
    <string name="stamp_new">New Stamp Name</string>
    <string name="icon">icon</string>
    <string name="stop_casting">Stop Casting</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_previous">Previous</string>
    <string name="label_next">Next</string>
    <string name="dialog_permission_necessary_title">Permission required</string>
    <string name="dialog_permission_necessary_content">This app needs storage permission.</string>
    <string name="empty_message_ranking">Ranking according to your playback will be displayed.</string>
    <string name="empty_message_timeline">History according to your playback will be displayed.</string>
    <string name="empty_message_queue">Current playing queue will be displayed. You can choose queue on Home Screen.</string>
    <string name="empty_message_most_played">Most played songs will be displayed. You can change song count on Setting Screen.</string>
    <string name="empty_message_playlist">Playlists created on Android will be displayed.</string>
    <string name="empty_message_my_stamp">Created stamps will be displayed. You can create stamp by tapping bottom right button on Home Screen.</string>
    <string name="empty_message_smart_stamp">Smart stamps registered automatically according to your playback will be displayed.</string>
    <string name="empty_message_new">New registered songs will be displayed. You can change displaying period on Setting Screen.</string>
    <string name="choose_stamps">Choose stamps and tap OK</string>
    <string name="empty_stamp">Stamp has not registered yet. Please register stamp by + button.</string>
    <string name="period">Period</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="invalid_backup_selected">Unsupported file was selected.</string>
     <string name="spotlight_stamp_add_title">Tap [Add] button</string>
     <string name="spotlight_stamp_add_description">You can press selected stamps to your song by this button.</string>
    <string name="song_db_refresh">Refresh Song database</string>
    <string name="song_db_refresh_summary">If Android music information is updated like a model change, please update music information from here.</string>
    <string name="dialog_confirm_song_db_refresh">Refresh music information ?</string>
    <string name="dialog_confirm_merge_song">Merge stamps and playbacks of [%1$s] into [%2$s]</string>
    <string name="song_history">Song history</string>
    <string name="song_db_unknown">Unknown songs</string>
    <string name="song_db_unknown_summary">Show songs cannot be played.</string>
    <string name="dialog_remove_stamp_title">Remove song from stamp</string>
    <string name="dialog_remove_stamp_content">Do you want to remove song[%1$s] from stamp[%2$s] ?</string>
    <string name="error_message_stamp_failed">Remove failed. This song is stamped by Artist or Album.</string>
</resources>