<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="@dimen/playback_controls_albumart_size"
        android:layout_height="@dimen/playback_controls_albumart_size"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/currently_playing_song"
        android:scaleType="centerCrop"
        android:layout_margin="@dimen/playback_controls_padding"
        tools:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/playback_controls_albumart_horizontal_margin"
        android:layout_toEndOf="@id/album_art"
        android:layout_toStartOf="@+id/play_pause"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/currently_playing_song"
            android:ellipsize="end"
            android:gravity="bottom"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            tools:text="The Best Music EVAHg"/>

        <TextView
            android:id="@+id/artist"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/currently_playing_artist"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="John Doe and Band"/>

        <TextView
            android:id="@+id/extra_info"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/currently_playing_extra_info"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone"
            tools:text="casting to MyCast"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/play_pause"
        android:padding="8dp"
        android:src="@drawable/ic_play_arrow_black_36dp"
        android:tint="?android:attr/colorAccent"
        android:tintMode="src_in"/>
</RelativeLayout>
