<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/period_kind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/period"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/period_kind_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/period_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/period_kind"
        android:layout_marginTop="24sp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/period_year_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="16dp"
            android:text="@string/year"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/period_year_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/period_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/period_year"
        android:layout_marginTop="24sp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/period_month_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="16dp"
            android:text="@string/month"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/period_month_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/period_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/period_month"
        android:layout_marginTop="24sp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/period_day_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="16dp"
            android:text="@string/day"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/period_day_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/period_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/period_day"
        android:layout_marginTop="24sp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/from">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/date_picker_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:focusable="false"
                android:inputType="none"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/to">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/date_picker_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:focusable="false"
                android:inputType="none"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</RelativeLayout>
